# yoshimi-test

./: .gitignore  DIR_INFO  README.md  run-tests
aux/: DIR_INFO  mig202204_runtimeCSV.py
testsuite/: .gitignore  DIR_INFO  HelloWorld.test  defaults.ini  initial.state
testsuite/features/: BasicADD.test  BasicPAD.test  BasicSUB.test  DIR_INFO
testsuite/patches/: DIR_INFO
testsuite/scenes/: DIR_INFO
yoshimi-testrunner/: CMakeLists.txt  DIR_INFO
yoshimi-testrunner/src/: Config.cpp  Config.hpp  DIR_INFO  Main.cpp  Stage.cpp  Stage.hpp  Suite.cpp  Suite.hpp  research-experiment.hpp
yoshimi-testrunner/src/setup/: Builder.cpp  Builder.hpp  Mould.cpp  Mould.hpp  WiringMould.hpp
yoshimi-testrunner/src/suite/: Progress.cpp  Progress.hpp  Report.hpp  Result.hpp  TestLog.cpp  TestLog.hpp  TestStep.hpp  Timings.cpp  Timings.hpp
yoshimi-testrunner/src/suite/step/: CleanUp.hpp  Conclusion.hpp  Invocation.hpp  Invoker.cpp  Invoker.hpp  Judgement.hpp  MatchTask.cpp  MatchTask.hpp  Observation.hpp  OutputObservation.hpp  PathSetup.hpp  PersistModelTrend.hpp  PersistTimings.hpp  PlatformCalibration.hpp  PrepareScript.cpp  PrepareScript.hpp  Scaffolding.cpp  Scaffolding.hpp  Script.hpp  SoundJudgement.hpp  SoundObservation.hpp  SoundRecord.hpp  Summary.hpp  TimingJudgement.hpp  TimingObservation.cpp  TimingObservation.hpp  TrendJudgement.hpp  TrendObservation.hpp  Watcher.cpp  Watcher.hpp
yoshimi-testrunner/src/util/: data.hpp  error.hpp  filehandle.hpp  format.hpp  nocopy.hpp  parse.cpp  parse.hpp  sound.cpp  sound.hpp  tee.hpp  utils.cpp  utils.hpp
(+191 files in other folders)
